Style and icons change.

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -83,7 +83,7 @@ select {
 }
 
 .myInput.search {
-	background-image: url("./search.svg");
+	background-image: url("../icons/search.svg");
 }
 
 .subtitle {
