--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -19,6 +19,8 @@ body {
 	font-size: 1rem;
 	font-family: -apple-system, BlinkMacSystemFont, sans-serif;
 	height: 100vh;
+	width: 100vw;
+	overflow-x: hidden;
 }
 
 a {
@@ -29,6 +31,8 @@ nav {
 	background-color: var(--main-bg-color);
 	width: 100%;
 	box-shadow: 0 2px 0 0 #f5f5f5;
+	position: fixed;
+	z-index: 1;
 }
 
 nav p {
@@ -41,7 +45,7 @@ nav p {
 }
 
 section {
-	padding: 3rem 1.5rem;
+	padding: 8rem 1.5rem 3rem;
 }
 
 .container {
@@ -53,7 +57,7 @@ section {
 	display: flex;
 	margin-left: 12px;
 	margin-right: 12px;
-	margin-bottom: 24px;
+	margin-bottom: 1.5rem;
 }
 
 .container .select-boxes div {
@@ -64,14 +68,15 @@ select {
 	min-height: 38px;
 	max-width: 292px;
 	width: 100%;
-	font-size: 18px;
+	font-size: 1rem;
 	margin-top: 12px;
-	padding: 2px 10px;
+	padding: 12px 20px 12px 12px;
 	-webkit-appearance: none;
 	border: 1px solid #ddd;
 	background-color: var(--secondary-bg-color);
 	color: var(--main-text-color);
 	outline: none;
+	box-sizing: border-box;
 }
 
 .myInput {
@@ -79,7 +84,7 @@ select {
 	background-position: 10px 12px;
 	background-repeat: no-repeat;
 	width: 100%;
-	font-size: 16px;
+	font-size: 1rem;
 	padding: 12px 20px 12px 40px;
 	border: 1px solid #ddd;
 	margin-top: 12px;
@@ -87,6 +92,7 @@ select {
 	border-radius: 4px;
 	background-color: var(--secondary-bg-color);
 	outline: none;
+	box-sizing: border-box;
 }
 
 .myInput.search {
@@ -98,16 +104,12 @@ select {
 	font-size: 1.3rem;
 }
 
-.feed-section {
-	margin-top: 24px;
-}
-
 .feed-section .title {
 	margin: 0 12px;
 }
 
 .feeds {
-	margin-top: 24px;
+	margin-top: 1.5rem;
 	display: flex;
 	flex-wrap: wrap;
 	justify-content: center;
@@ -177,10 +179,15 @@ select {
 	color: #828282;
 }
 
+.table-div {
+	margin: 12px;
+	overflow-x: scroll;
+}
+
 .table-container {
 	border-collapse: collapse;
 	width: 100%;
-	margin-top: 24px;
+	margin-top: 1.5rem;
 }
 
 .table-container td,
@@ -193,9 +200,9 @@ select {
 	background-color: #f2f2f2;
 }
 
-.table-container tr:hover {
+/*.table-container tr:hover {
 	background-color: #ddd;
-}
+}*/
 
 .table-container th {
 	padding-top: 12px;
@@ -205,6 +212,25 @@ select {
 	color: white;
 }
 
+.table-container .table-name {
+	min-width: 200px;
+}
+
+.table-container .table-date {
+	min-width: 100px;
+}
+
+.table-container .table-image {
+	width: 200px;
+	height: 200px;
+	box-sizing: border-box;
+}
+
+.table-container .table-image img {
+	width: 100%;
+	height: 100%;
+}
+
 /*********************************Media Queries*********************************/
 
 /* 
@@ -212,11 +238,14 @@ select {
   ##Screen = 1472px and above.
 */
 
-@media (min-width: 1472px) {
+@media (min-width: 1357px) {
 	/* For desktop: */
 	.container {
 		max-width: 1344px;
 		width: 1344px;
+	}
+	.container .select-boxes div:last-child {
+		text-align: right;
 	}
 }
 
@@ -228,10 +257,14 @@ select {
 @media (min-width: 768px) and (max-width: 1356px) {
 	.feeds .feed {
 		flex: 0 0 45%;
+		height: 450px;
 	}
-	/*.container .select-boxes:first-child {
-		margin-bottom: 24px;
-	}*/
+	.container .select-boxes div {
+		margin: 12px;
+	}
+	.container .select-boxes div:last-child {
+		text-align: right;
+	}
 }
 
 /* 
@@ -247,7 +280,24 @@ select {
 		flex-direction: column;
 	}
 	.container .select-boxes div:first-child {
-		margin-bottom: 24px;
+		margin-bottom: 1.5rem;
+	}
+	.container .select-boxes div:last-child {
+		text-align: left;
+	}
+	.myInput,
+	select {
+		max-width: 100%;
+	}
+
+	.table-container .table-name {
+		min-width: 100px;
+	}
+
+	.table-container .table-image {
+		width: 100px;
+		height: 100px;
+		box-sizing: border-box;
 	}
 }
 
@@ -265,6 +315,22 @@ select {
 		flex-direction: column;
 	}
 	.container .select-boxes div:first-child {
-		margin-bottom: 24px;
+		margin-bottom: 1.5rem;
+	}
+	.container .select-boxes div:last-child {
+		text-align: left;
+	}
+	.myInput,
+	select {
+		max-width: 100%;
+	}
+	.table-container .table-name {
+		min-width: 100px;
+	}
+
+	.table-container .table-image {
+		width: 100px;
+		height: 100px;
+		box-sizing: border-box;
 	}
 }
